# CRFSegmenter

./: .gitmodules  CMakeLists.txt  HOCRF.sln  LICENSE.txt  README.md
DataConverter/: AggregatedFeatureTemplateGenerator.h  CMakeLists.txt  CharWithSpace.cpp  CharWithSpace.h  CharWithSpaceFeatureGenerator.cpp  CharWithSpaceFeatureGenerator.h  CharWithSpaceTypeFeatureGenerator.cpp  CharWithSpaceTypeFeatureGenerator.h  CharacterFeatureGenerator.cpp  CharacterFeatureGenerator.h  CharacterTypeFeatureGenerator.cpp  CharacterTypeFeatureGenerator.h  DataConverterInterface.h  DataConverterMain.cpp  DictionaryFeatureGenerator.cpp  DictionaryFeatureGenerator.h  FeatureTemplateGenerator.h  ObservationSequence.h  SegmenterDataConverter.cpp  SegmenterDataConverter.h  SegmenterDictionaryFeatureGenerator.cpp  SegmenterDictionaryFeatureGenerator.h  TaggerDataConverter.cpp  TaggerDataConverter.h  UnconditionalFeatureTemplateGenerator.h  UnicodeCharacter.cpp  UnicodeCharacter.h  WordCharacterFeatureGenerator.cpp  WordCharacterFeatureGenerator.h  WordCharacterTypeFeatureGenerator.cpp  WordCharacterTypeFeatureGenerator.h  WordFeatureGenerator.cpp  WordFeatureGenerator.h  convert_script.pl  script_data.h
Dictionary/: CMakeLists.txt  DictionaryClass.cpp  DictionaryClass.h  DictionaryMain.cpp  SingleDictionary.cpp  SingleDictionary.h
HighOrderCRF/: AggregatedFeatureTemplateGenerator.h  CMakeLists.txt  CompactPattern.h  CompactPatternSetSequence.cpp  CompactPatternSetSequence.h  DataSequence.cpp  DataSequence.h  Feature.cpp  Feature.h  FeatureTemplate.cpp  FeatureTemplate.h  FeatureTemplateGenerator.h  HighOrderCRF.vcxproj  HighOrderCRFData.cpp  HighOrderCRFData.h  HighOrderCRFMain.cpp  HighOrderCRFProcessor.cpp  HighOrderCRFProcessor.h  InternalDataSequence.cpp  InternalDataSequence.h  LabelSequence.cpp  LabelSequence.h  ObservationSequence.h  ObservationSet.h  Optimizer.cpp  Optimizer.h  Pattern.cpp  Pattern.h  PatternSetSequence.cpp  PatternSetSequence.h  Trie.h  UnconditionalFeatureTemplateGenerator.h  Utility.cpp  Utility.h  types.h
JapaneseAnalyzer/: CMakeLists.txt  JapaneseAnalyzer.cpp  JapaneseAnalyzer.h  JapaneseAnalyzerClass.cpp  JapaneseAnalyzerClass.h  JapaneseAnalyzerMain.cpp  JapaneseAnalyzerProxy.cpp  JapaneseAnalyzerProxy.h
KoreanAnalyzer/: CMakeLists.txt  KoreanAnalyzerClass.cpp  KoreanAnalyzerClass.h  KoreanAnalyzerMain.cpp  KoreanConcatenatorClass.cpp  KoreanConcatenatorClass.h  KoreanConcatenatorMain.cpp
MaxEnt/: CMakeLists.txt  CompiledData.cpp  CompiledData.h  MaxEntData.cpp  MaxEntData.h  MaxEntProcessor.cpp  MaxEntProcessor.h  Observation.cpp  Observation.h
MorphemeConcatenator/: CMakeLists.txt  MorphemeConcatenatorClass.cpp  MorphemeConcatenatorClass.h  MorphemeConcatenatorMain.cpp
MorphemeDisambiguator/: CMakeLists.txt  MorphemeDisambiguatorClass.cpp  MorphemeDisambiguatorClass.h  MorphemeDisambiguatorMain.cpp  MorphemeDisambiguatorMain.h  MorphemeDisambiguatorOptions.h
MorphemeTagger/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  MorphemeTaggerClass.cpp  MorphemeTaggerClass.h  MorphemeTaggerOptions.h
NgramDecoder/: CMakeLists.txt  DictionaryDecoder.cpp  DictionaryDecoder.h  DictionaryDecoderMain.cpp  NgramDecoderClass.cpp  NgramDecoderClass.h  NgramDictionaryDecoder.cpp  NgramDictionaryDecoder.h  NgramDictionaryDecoderMain.cpp  NgramSpaceDecoderMain.cpp
Optimizer/: CMakeLists.txt  OptimizerClass.cpp  OptimizerClass.h
Segmenter/: CMakeLists.txt  CharWithSpace.cpp  CharWithSpace.h  CharWithSpaceFeatureGenerator.cpp  CharWithSpaceFeatureGenerator.h  CharWithSpaceTypeFeatureGenerator.cpp  CharWithSpaceTypeFeatureGenerator.h  CharacterFeatureGenerator.cpp  CharacterFeatureGenerator.h  CharacterTypeFeatureGenerator.cpp  CharacterTypeFeatureGenerator.h  Dictionary.cpp  Dictionary.h  DictionaryFeatureGenerator.cpp  DictionaryFeatureGenerator.h  Segmenter.vcxproj  SegmenterClass.cpp  SegmenterClass.h  SegmenterOptions.h  TrainingOptions.h  UnicodeCharacter.cpp  UnicodeCharacter.h  script_data.h
Tagger/: CMakeLists.txt  DictionaryFeatureGenerator.cpp  DictionaryFeatureGenerator.h  TaggerClass.cpp  TaggerClass.h  TaggerOptions.h  WordFeatureGenerator.cpp  WordFeatureGenerator.h
Utility/: AtomicFixedPointNumber.h  CMakeLists.txt  CharWithSpace.cpp  CharWithSpace.h  CharacterCluster.cpp  CharacterCluster.h  EncodeUtil.cpp  EncodeUtil.h  EncryptionUtil.cpp  EncryptionUtil.h  FileUtil.cpp  FileUtil.h  KoreanUtil.cpp  KoreanUtil.h  SegmenterUtil.cpp  SegmenterUtil.h  SplitString.cpp  SplitString.h  StringUtil.cpp  StringUtil.h  UnicodeCharacter.cpp  UnicodeCharacter.h  script_data.h
kenlm/: CMakeLists.txt  temp.hh
kenlm/lm/: CMakeLists.txt
kenlm/util/: CMakeLists.txt  file_piece.cc
kenlm/util/double-conversion/: CMakeLists.txt
liblbfgs/: CMakeLists.txt
libmarisa/: CMakeLists.txt
models/: japanese.dict.concat  japanese.morph.train.model  japanese.postag.train.model  japanese.segment.train.model
optionparser/: optionparser.h
resources/: cforms.tsv  pos_table_ipadic.tsv
scripts/: AbgdData.pm  analyze.config.pl  concat_ipadic.pl  convert_bccwj.pl  convert_ipadic.pl  convert_ipadic_corpus.pl  convert_japanese_dict.pl  convert_japanese_dict_with_args.pl  convert_unidic.pl  filter_model.pl  japanese.analyze.pl  japanese_postprocess.pl  sentence_joiner.pl  sentence_splitter.pl  set_build_dir.pl
task/: locked_queue.hpp  task_base.hpp  task_impl.hpp  task_queue.hpp
win32/liblbfgs/: lbfgs.lib
