cmake_minimum_required (VERSION 2.6)
project (HOCRF)
list(APPEND CMAKE_CXX_FLAGS "-pthread -std=c++11 ${CMAKE_CXX_FLAGS}")
add_subdirectory(liblbfgs)
add_subdirectory(libmarisa)
add_subdirectory(DataConverter)
add_subdirectory(Dictionary)
add_subdirectory(HighOrderCRF)
add_subdirectory(MaxEnt)
add_subdirectory(MorphemeDisambiguator)
add_subdirectory(Optimizer)
add_subdirectory(Utility)
add_dependencies(Optimizer liblbfgs)
add_dependencies(HighOrderCRF Optimizer Utility)
add_dependencies(MaxEnt Optimizer)
add_dependencies(Dictionary libmarisa Utility)
add_dependencies(DataConverter Dictionary HighOrderCRF Utility)
add_dependencies(MorphemeDisambiguator MaxEnt Utility)
