cmake_minimum_required (VERSION 2.6)
project (HOCRF)
if (NOT MSVC)
    list(APPEND CMAKE_CXX_FLAGS "-pthread -fPIC ${CMAKE_CXX_FLAGS}")
    list(APPEND CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
endif()
add_subdirectory(kenlm)
add_subdirectory(liblbfgs)
add_subdirectory(libmarisa)
add_subdirectory(DataConverter)
add_subdirectory(Dictionary)
add_subdirectory(HighOrderCRF)
add_subdirectory(JapaneseAnalyzer)
add_subdirectory(KoreanAnalyzer)
add_subdirectory(MaxEnt)
add_subdirectory(MorphemeConcatenator)
add_subdirectory(MorphemeDisambiguator)
add_subdirectory(NgramDecoder)
add_subdirectory(Optimizer)
add_subdirectory(Utility)
add_dependencies(Optimizer liblbfgs)
add_dependencies(HighOrderCRF Optimizer Utility)
add_dependencies(MaxEnt Optimizer)
add_dependencies(Dictionary libmarisa Utility)
add_dependencies(DataConverter Dictionary HighOrderCRF Utility)
add_dependencies(MorphemeConcatenator Dictionary Utility)
add_dependencies(MorphemeDisambiguator Dictionary MaxEnt Utility)
add_dependencies(JapaneseAnalyzer DataConverter HighOrderCRF MorphemeConcatenator MorphemeDisambiguator)
add_dependencies(NgramDecoder kenlm)
add_dependencies(KoreanAnalyzer DataConverter HighOrderCRF NgramDecoder)
